# fingerpaintfun

./: .gitignore  GUIDE.md  README.md  go.mod  go.sum  main.go  meson.build
cfg/: appid.go  brushes.go  colors.go
data/: fun.fingerpaint.app.desktop.in  style.css
lib/brush/: brush.go  interpolate.go
lib/canvas/: active.go  state.go  undo.go
lib/palm/: reject.go
lib/stroke/: stroke.go
ui/: actions.go  app.go  bgpicker.go  brushpicker.go  brushrender.go  canvas.go  fill.go  gallery.go  gate.go  mascot.go  palette.go  renderer.go  sound.go  stamps.go  style.go  templates.go  toolbar.go  window.go
